--- a/package.json
+++ b/package.json
@@ -2,20 +2,14 @@
   "name": "@mitchallen/playing-card-deck",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index-factory.js",
   "scripts": {
-    "//": "To use: npm start (useful if not a module)",
-    "start": "node index.js",
-    "//": "To use: npm test (assumes mocha installed globally)",
-    "test": "mocha --recursive --timeout 20000",
     "//": "To use: npm run test-nodemon (assumes global location of mocha)",
+    "start": "node index.js",
+    "test": "mocha --recursive --timeout 20000",
     "test-nodemon": "nodemon /usr/local/bin/mocha --timeout 5000",
     "test-debug": "nodemon /usr/local/bin/mocha -g '@DEBUG' --recursive --timeout 20000",
     "test-jenkins": "mocha --recursive --timeout 20000 -R xunit test/ > test-reports.xml"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://bitbucket.org/mitchallen/playing-card-deck.git"
   },
   "repository": {
     "type": "git",
@@ -24,7 +18,11 @@
   "author": "Mitch Allen <npm@mitchallen.com> (http://mitchallen.com)",
   "license": "ISC",
   "dependencies": {
-    "@mitchallen/factory-base": "0.1.0"
+    "@mitchallen/factory-base": "0.1.0",
+    "@mitchallen/playing-card": "^0.1.5",
+    "@mitchallen/playing-card-rank": "^0.1.3",
+    "@mitchallen/playing-card-suit": "^0.1.5",
+    "@mitchallen/shuffle": "^0.1.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
